# Projet-Vision

./: CoinDetector.prj  Fonction_Somme.m  settings.gradle  test.m
app/: CMakeLists.txt  build.gradle
app/src/cpp/: native-lib.c
app/src/cpp/codegen/lib/Fonction_Somme/: Fonction_Somme.c  Fonction_Somme.h  Fonction_Somme_data.c  Fonction_Somme_data.h  Fonction_Somme_emxutil.c  Fonction_Somme_emxutil.h  Fonction_Somme_initialize.c  Fonction_Somme_rtw.bat  Fonction_Somme_rtw.mk  Fonction_Somme_rtwutil.c  Fonction_Somme_rtwutil.h  Fonction_Somme_terminate.c  Fonction_Somme_terminate.h  Fonction_Somme_types.h  bwconncomp.c  chaccum.c  chaccum.h  chcenters.c  chcenters.h  codedescriptor.dmr  combineVectorElements.c  find.c  imfilter.c  imfilter.h  imfindcircles.c  imfindcircles.h  imhist.c  imhist.h  imhmax.c  imregionalmax.c  imregionalmax.h  mean.c  (+20 more)
app/src/main/: AndroidManifest.xml
app/src/main/c/: CMakeLists.txt  Fonction_Somme.prj  native-lib.c
app/src/main/c/Fonction_Somme/: Fonction_Somme.c  Fonction_Somme.h  Fonction_Somme_data.c  Fonction_Somme_data.h  Fonction_Somme_emxutil.c  Fonction_Somme_initialize.c  Fonction_Somme_initialize.h  Fonction_Somme_rtw.bat  Fonction_Somme_rtw.mk  Fonction_Somme_rtwutil.c  Fonction_Somme_terminate.c  bwconncomp.c  bwconncomp.h  chaccum.c  chcenters.c  codedescriptor.dmr  combineVectorElements.c  combineVectorElements.h  find.c  find.h  imfilter.c  imfindcircles.c  imhist.c  imhmax.c  imhmax.h  imregionalmax.c  imresize.c  mean.c  medfilt2.c  medfilt2.h  minOrMax.c  minOrMax.h  multithresh.c  regionprops.h  rgb2lab.h  rtGetInf.c  rtGetNaN.c  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  (+6 more)
app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
(+119 files in other folders)
